force-app/main/default/objects/Pipeline__mdt/Pipeline__mdt.object-meta.xml
<CustomObject>
    <description>Stores CMT values associated with the Pipeline Picklist Value Set</description>
    <label>Pipeline</label>
    <pluralLabel>Pipelines</pluralLabel>
</CustomObject>