force-app/main/default/objects/Pipeline__mdt/fields/checkGiftGroupAR__c.field-meta.xml
<CustomField>
    <fullName>checkGiftGroupAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this pipeline type go through processing for HG gift group</description>
    <label>checkGiftGroupAR</label>
    <type>Checkbox</type>
</CustomField>