force-app/main/default/objects/Pipeline__mdt/fields/checkGiftGroupHG__c.field-meta.xml
<CustomField>
    <fullName>checkGiftGroupHG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this pipeline type go through processing for HG gift group</description>
    <label>checkGiftGroupHG</label>
    <type>Checkbox</type>
</CustomField>