force-app/main/default/objects/Pipeline__mdt/fields/checkGiftGroupPP__c.field-meta.xml
<CustomField>
    <fullName>checkGiftGroupPP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this pipeline type go through processing for PP gift group</description>
    <label>checkGiftGroupPP</label>
    <type>Checkbox</type>
</CustomField>