force-app/main/default/objects/Pipeline__mdt/fields/checkGiftGroupPR__c.field-meta.xml
<CustomField>
    <fullName>checkGiftGroupPR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Group for gifts that did not hit hierarchy, but GDM needs to have a manual review before posting instead of an auto post</description>
    <label>checkGiftGroupPR</label>
    <type>Checkbox</type>
</CustomField>