force-app/main/default/objects/Pipeline__mdt/fields/checkGiftGroups__c.field-meta.xml
<CustomField>
    <fullName>checkGiftGroups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this pipeline type go through gift group processing?</description>
    <label>checkGiftGroups</label>
    <type>Checkbox</type>
</CustomField>