force-app/main/default/objects/Pipeline__mdt/fields/checkGiftGroupYA__c.field-meta.xml
<CustomField>
    <fullName>checkGiftGroupYA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this pipeline type go through processing for YA gift group</description>
    <label>checkGiftGroupYA</label>
    <type>Checkbox</type>
</CustomField>