force-app/main/default/objects/Pipeline__mdt/fields/Online__c.field-meta.xml
<CustomField>
    <fullName>Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a gift came from an online source and an electronic gift receipt has already been provided.</description>
    <inlineHelpText>Indicates that a gift came from an online source and an electronic gift receipt has already been provided.</inlineHelpText>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>