force-app/main/default/objects/Pipeline__mdt/fields/override_reciept_date__c.field-meta.xml
<CustomField>
    <fullName>override_reciept_date__c</fullName>
    <description>When a value is in this record, the nd_rtv2_processing job will use this field to set the transaction/ credit overide dates. This is mainly used at calendar year end.</description>
    <label>override_reciept_date</label>
    <type>Date</type>
</CustomField>